--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"vscode": "^1.63.0"
 	},
 	"dependencies": {
+		"express": "^4.18.1",
 		"vscode-languageclient": "^7.0.0"
 	},
 	"devDependencies": {
