--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"vscode": "^1.63.0"
 	},
 	"activationEvents": [
-		"onLanguage:plaintext"
+		"onLanguage:python"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
@@ -61,5 +61,8 @@
 		"eslint": "^8.13.0",
 		"mocha": "^9.2.1",
 		"typescript": "^4.7.2"
+	},
+	"dependencies": {
+		"express": "^4.18.1"
 	}
 }
