--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "lsp-sample",
-	"description": "A language server example",
-	"author": "Microsoft Corporation",
+	"name": "lsp-messiah",
+	"description": "A messiah language server",
+	"author": "xiaohao@corp.netease.com",
 	"license": "MIT",
 	"version": "1.0.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://gitlab.nie.netease.com/xiaohao/vscode-messiah-completion"
 	},
-	"publisher": "vscode-samples",
+	"publisher": "xiaohao",
 	"categories": [],
 	"keywords": [
 		"multi-root ready"
