--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"description": "A messiah language server",
 	"author": "xiaohao@corp.netease.com",
 	"license": "MIT",
-	"version": "1.0.0",
+	"version": "1.0.3",
 	"repository": {
 		"type": "git",
 		"url": "https://gitlab.nie.netease.com/xiaohao/vscode-messiah-completion"
@@ -23,24 +23,25 @@
 	"contributes": {
 		"configuration": {
 			"type": "object",
-			"title": "Example configuration",
+			"title": "MessiahCompletionServer",
 			"properties": {
-				"languageServerExample.maxNumberOfProblems": {
+				"MessiahCompletion.maxNumberOfProblems": {
 					"scope": "resource",
 					"type": "number",
 					"default": 100,
 					"description": "Controls the maximum number of problems produced by the server."
 				},
-				"languageServerExample.trace.server": {
-					"scope": "window",
+				"MessiahCompletion.ip": {
+					"scope": "resource",
 					"type": "string",
-					"enum": [
-						"off",
-						"messages",
-						"verbose"
-					],
-					"default": "off",
-					"description": "Traces the communication between VS Code and the language server."
+					"default": "127.0.0.1",
+					"description": "language server ip"
+				},
+				"MessiahCompletion.port": {
+					"scope": "resource",
+					"type": "number",
+					"default": 16471,
+					"description": "language server port"
 				}
 			}
 		}
